--- a/joker/build.gradle
+++ b/joker/build.gradle
@@ -13,6 +13,12 @@ android {
         versionName "1.0"
     }
 
+    sourceSets{
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
